Fixed styles to prevent body from changing width on content overflow

--- a/src/components/App/_layout.styl
+++ b/src/components/App/_layout.styl
@@ -16,3 +16,4 @@ body
 	background-color var(--background_color)
 	overflow-x hidden
 	line-height 1.5
+	width 100vw
